impl/src/main/java/org/jboss/cdi/tck/tests/build/compatible/extensions/invalid/SomeBean.java
package org.jboss.cdi.tck.tests.build.compatible.extensions.invalid;

import jakarta.enterprise.context.Dependent;

// Dummy bean class just to have some in the bean archive
@Dependent
public class SomeBean {
}
